Bug 426157 - Translation for "Default settings for window decoration" too long to fit in German
Summary: Translation for "Default settings for window decoration" too long to fit in G...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwindecoration (other bugs)
Version First Reported In: 5.19.4
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-03 18:54 UTC by postix
Modified: 2020-11-13 21:39 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21
Sentry Crash Report:


Attachments
Screenshot (111.97 KB, image/png)
2020-09-03 18:54 UTC, postix
Details

Note You need to log in before you can comment on or make changes to this bug.
Description postix 2020-09-03 18:54:50 UTC
Created attachment 131402 [details]
Screenshot

SUMMARY

The translation is
"Voreinstellungen der Fe[nsterdekoration]". The part with [] doesn't fit.

Maybe it would be better if the "Get new window decoration" goes to the next line, which would also make more sense contextually IMO.


SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux
KDE Plasma Version: 5.19.4
KDE Frameworks Version: 5.73.0
Qt Version: 5.15.0

ADDITIONAL INFORMATION
Scaling: 2.0
Comment 1 Patrick Silva 2020-09-04 20:03:34 UTC
pt-br translation is also affected, see bug 417430
Comment 2 Nate Graham 2020-09-08 04:43:02 UTC
It's even too long for English. This layout needs a bit of re-thinking so that long strings can fit, or else the string needs to be shortened.
Comment 3 Ismael Asensio 2020-11-13 21:39:44 UTC
Git commit 9cf52340efe6a3958285a796e52420db227d739e by Ismael Asensio.
Committed on 13/11/2020 at 21:00.
Pushed by iasensio into branch 'master'.

kcm/decorations: Simplify border selection

Use a single combobox instead of checkbox + combobox.
Adds a new property that acts as a proxy for the configuration value,
while internal configuration properties are kept unchanged.
Related: bug 417430
FIXED-IN: 5.21

M  +22   -1    kcmkwin/kwindecoration/kcm.cpp
M  +6    -2    kcmkwin/kwindecoration/kcm.h
M  +7    -38   kcmkwin/kwindecoration/package/contents/ui/main.qml

https://invent.kde.org/plasma/kwin/commit/9cf52340efe6a3958285a796e52420db227d739e